--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -8,38 +8,41 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v3
-      -
-        # Add support for more platforms with QEMU (optional)
-        # https://github.com/docker/setup-qemu-action
-        name: Set up QEMU
+
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Login to container registry
+
+      - name: Login to container registry
         uses: docker/login-action@v2
         with:
+          registry: ghcr.io
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_TOKEN }}
-          registry: ghcr.io
-      -
-        name: Build and Push arm64
+
+      - name: Build and Push arm64
         uses: docker/build-push-action@v3
         with:
           context: .
-          tags:
-            ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }}-arm64
+          tags: ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }}-arm64
           platforms: linux/arm64
           push: true
-      -
-         name: Build and Push amd64
-         uses: docker/build-push-action@v3
-         with:
+
+      - name: Build and Push amd64
+        uses: docker/build-push-action@v3
+        with:
           context: .
           tags: ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }}-amd64
           platforms: linux/amd64
           push: true
+
+      - name: Create and Push manifest
+        run: |
+          docker manifest create ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }} \
+            ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }}-amd64 \
+            ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }}-arm64
+          docker manifest push ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }}
