--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -40,9 +40,9 @@ jobs:
           platforms: linux/amd64
           push: true
 
-      - name: Create and Push manifest
-        run: |
-          docker manifest create ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }} \
-            ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }}-amd64 \
-            ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }}-arm64
-          docker manifest push ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }}
+      #- name: Create and Push manifest
+      #  run: |
+      #    docker manifest create ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }} \
+      #      ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }}-amd64 \
+      #      ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }}-arm64
+      #    docker manifest push ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }}
