--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -41,7 +41,7 @@ jobs:
           push: true
 
       - name: Create and Push manifest
-        depends-on: [Build and Push arm64, Build and Push amd64]
+        needs: [Build and Push arm64, Build and Push amd64]
         run: |
           docker manifest create ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }} \
             ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }}-amd64 \
