--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,8 +1,9 @@
 name: Docker Image CI
 
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - '**'
 
 jobs:
   buildx:
@@ -29,7 +30,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          tags: ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }}-arm64
+          tags: ghcr.io/tech1ndex/caddy-cloudflare:${{ github.sha }}-arm64
           platforms: linux/arm64
           push: true
 
@@ -37,13 +38,13 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          tags: ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }}-amd64
+          tags: ghcr.io/tech1ndex/caddy-cloudflare:${{ github.sha }}-amd64
           platforms: linux/amd64
           push: true
 
       - name: Create and Push manifest
         run: |
-          docker manifest create ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }} \
-            ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }}-amd64 \
-            ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }}-arm64
-          docker manifest push ghcr.io/tech1ndex/caddy-cloudflare:${{ github.event.release.tag_name }}
+          docker manifest create ghcr.io/tech1ndex/caddy-cloudflare:${{ github.sha }} \
+            ghcr.io/tech1ndex/caddy-cloudflare:${{ github.sha }}-amd64 \
+            ghcr.io/tech1ndex/caddy-cloudflare:${{ github.sha }}-arm64
+          docker manifest push ghcr.io/tech1ndex/caddy-cloudflare:${{ github.sha }}
