--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -47,4 +47,8 @@ jobs:
           docker manifest create ghcr.io/tech1ndex/caddy-cloudflare:${{ github.sha }} \
             ghcr.io/tech1ndex/caddy-cloudflare:${{ github.sha }}-amd64 \
             ghcr.io/tech1ndex/caddy-cloudflare:${{ github.sha }}-arm64
+          docker manifest annotate ghcr.io/tech1ndex/caddy-cloudflare:${{ github.sha }} \
+            ghcr.io/tech1ndex/caddy-cloudflare:${{ github.sha }}-amd64 --arch amd64
+          docker manifest annotate ghcr.io/tech1ndex/caddy-cloudflare:${{ github.sha }} \
+            ghcr.io/tech1ndex/caddy-cloudflare:${{ github.sha }}-arm64 --arch arm64
           docker manifest push ghcr.io/tech1ndex/caddy-cloudflare:${{ github.sha }}
